--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="pl">
-		<center><img src="img/gifsz.gif" height="60%" width="60%" /></center>
+		<center><img src="gifsz.gif" height="60%" width="60%" /></center>
 <head>
 	<meta charset="utf-8" />
 	<title>Najlepsze seriale 2010/2022</title>
@@ -28,7 +28,7 @@
 	<br /><br />
 	
 	<a href="https://www.filmweb.pl/serial/Squid+Game-2021-841842" target="_blank" title="SQUID GAME">
-	<img src="img/forrest.jpg" />
+	<img src="forrest.jpg" />
 	</a>
 
 	<br /><br />
@@ -41,7 +41,7 @@
 	<br /><br />
 	
 	<a href="https://www.filmweb.pl/serial/Peaky+Blinders-2013-680981" target="_blank" title="PEAKY F****** BLINDERS">
-		<img src="img/alien.jpg" />
+		<img src="alien.jpg" />
 	</a>
 	<br /><br>
 		STRANGER THINGS: 
@@ -52,7 +52,7 @@
 	<br /><br />
 	
 	<a href="https://www.filmweb.pl/serial/Stranger+Things-2016-750359" target="_blank" title="STRANGER">
-	<img src="img/stranger_things.jpg" />
+	<img src="stranger_things.jpg" />
 	</a>
 	
 	<br /><br>
@@ -64,7 +64,7 @@
 	<br /><br />
 	
 	<a href="https://www.filmweb.pl/serial/Gra+o+tron-2011-476848" target="_blank" title="TRON">
-	<img src="img/gra_o_tron.jpg" />
+	<img src="gra_o_tron.jpg" />
 	</a>
 		<br /><br>
 		THE PUNISHER: 
@@ -75,7 +75,7 @@
 	<br /><br />
 	
 	<a href="https://www.filmweb.pl/serial/The+Punisher-2017-767516" target="_blank" title="PUNISHER">
-	<img src="img/punisher.jpg" />
+	<img src="punisher.jpg" />
 	</a>
 	
 </center>
