--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<br /><br />
 	
 	<a href="https://www.filmweb.pl/serial/Squid+Game-2021-841842" target="_blank" title="SQUID GAME">
-	<img src="forrest.jpg" />
+	<img src="forrest.png" />
 	</a>
 
 	<br /><br />
